Bug 544428 - [12][compiler] SwitchExpression.check_nonconstant_int throws NPE